Updated the Main Map to make additional level changes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=ObstacleAssault
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Main.Main
+EditorStartupMap=/Game/Main1.Main1
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -11,7 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Main.Main
+GameDefaultMap=/Game/Main1.Main1
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/BP_ObstacleAssaultGameMode.BP_ObstacleAssaultGameMode_C
 GlobalDefaultServerGameMode=None
